--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -47,7 +47,7 @@ body {
   background: $white;
   height: 100%;
   font-family: $font-acumin;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   line-height: 1.6;
   font-weight: 400;
   z-index: 2;
@@ -105,14 +105,14 @@ img {
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-system;
   color: $black;
-  font-weight: 800;
+  font-weight: 700;
   letter-spacing: 0;
 }
 h5 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 h4 {
-  font-size: 2.4rem;
+  font-size: 2.2rem;
 }
 a {
   color: $blue;
@@ -624,8 +624,8 @@ p.lead {
     color: $black;
     margin-bottom: 1rem;
     margin-top: 3rem;
-    font-size: 4rem;
-    font-weight: 800;
+    font-size: 3.8rem;
+    font-weight: 700;
     letter-spacing: -1px;
     line-height: 1.2;
     span {
@@ -1119,7 +1119,7 @@ img {
 .talks {
   padding: 4em 0 2em;
   h4 {
-    font-weight: 800;
+    font-weight: 700;
     letter-spacing: -1px;
     margin-bottom: 10px;
   }
@@ -1544,7 +1544,7 @@ footer {
   li small {
     text-transform: uppercase;
     color: $black;
-    font-weight: 800;
+    font-weight: 700;
   }
   .smallcopy {
     color: #455A64;
@@ -1876,6 +1876,7 @@ footer {
 .fancybox-button {
   width: 64px !important;
   height: 64px !important;
+  background: transparent !important;
 }
 .fancybox-button--arrow_right, .fancybox-button--arrow_left {
   width: 84px !important;
@@ -1884,4 +1885,8 @@ footer {
 .fancybox-infobar {
   padding: 16px 10px 0 26px !important;
   font-size: 15px !important;
+}
+.fancybox-bg {
+  background: #0b0e13 !important;
+  opacity: .96 !important;
 }
